2656 [OneClick]+[ChapterCreator] improved DVD/Blu-ray structure detection
2655 [IFOParser]            fixed missing first subtitle track if it contains more than one subtitle type
                            added type information (4:3/wide/letterbox/pan&scan) to the description of the subtitle track
                            added multi-angle detection
2653 [AudioEncoder]         fixed an error when aborting job during the initial steps
2652 [HD Streams Extractor] for DVD/Blu-ray sources a prefix and suffix is attached to the output file name. Feature request #597
                            added warning if "Haali Matroska Muxer" is required
2651 [FileIndexer]          added IFO as supported input files
                            improved PGC handling
2650 [OneClick] +           for DVD/Blu-ray sources a prefix and suffix is attached to the output file name. Feature request #597
     [FileIndexer]          pgcdemux will be used in any case as a workaround for multi-angle DVDs
	                        added MPLS as supported input files (OneClick)
2649 [ChapterCreator]       added the PGC number to the output as suffix
2648 [VobSubber]            added the PGC number to the output as suffix
                            preselect tracks based on the default language(s)
                            improved logging
2647 [PGCDemux]             changed where the intermediate files are created
2646 [VobSubber] +          use the default MeGUI output path if possible. Feature request #597
     [ChapterCreator]       for DVD/Blu-ray sources a prefix is attached to the output file name. Feature request #597
2645 [VobSubber]            added option to demux all tracks in a single file (as before 2637). Feature request #595
2644 [HD Streams Extractor] added IDX/VobSub as unsupported format
2643 [x264]                 adjusted "--preset slow" settings (requires x264 2721+). Bug #855