@@ -1,3 +1,5 @@
+2658 [OneClick]+[FileIndexer] only use pgcdemux if it is a multi-pgc or multi-angle DVD source
+2657 [IFOParser]            add subtitle type only if there are multiple types
 2656 [OneClick]+[ChapterCreator] improved DVD/Blu-ray structure detection
 2655 [IFOParser]            fixed missing first subtitle track if it contains more than one subtitle type
                             added type information (4:3/wide/letterbox/pan&scan) to the description of the subtitle track
